--- a/src/main/resources/xmlexportfilter.properties
+++ b/src/main/resources/xmlexportfilter.properties
@@ -2,3 +2,6 @@
 my.plugin.name=MyPlugin
 simple-search-view.name=Simple Search View
 simple-search-view.description=The Simple Search View Plugin
+
+search-request-interceptor.name=Search Request Interceptor
+search-request-interceptor.description=The Search Request Interceptor Plugin
